<resources>
    <string name="app_name">SGBusGO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_eta">Estimated Arrival Time</string>
    <string name="title_activity_alighting_alarm">Alighting Alarm</string>
    <string name="title_activity_fare_calculator">Fare Calculator</string>
    <string name="title_activity_base">SGBusGo</string>
    <string name="title_activity_search_bus_stop">Search Bus Stops</string>
    <string name="title_activity_bus_service_selection">Select Bus Service No</string>
    <string name="title_activity_bus_stop_selection">Select Bus Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_my_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_frequent_trip">Add Frequent Trip</string>
    <string name="bus_stop_no_match">No Bus Stop Matches</string>
    <string name="bus_service_no_match">No bus service number matches</string>
    <string name="action_proximity">ACTION_PROXIMITY_ALERT</string>
    <string name="filter_serviceno">Refine by: Bus Service No.</string>

    <string name="title_activity_current_trip">CurrentTripActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="btn_cancel_the_trip">Cancel the Trip</string>
    <string name="btn_calculate_text">Calculate Fare</string>
    <string name="start_bus_stop_txt">Start</string>
    <string name="alight_bus_stop_txt">End</string>
    <string name="bus_service_no">Bus Service No</string>
    <string name="empty_eta_list_message">The estimated arrival time of your frequent trips would appear here</string>
    <string name="select_bus_stop_btntxt">Select Bus Stop</string>
    <string name="alighting_alarm_failure">Connection Failure. Please check that your device is connected to internet and the location is enabled</string>
    <string name="alighting_alarm_success">Adding the Alighting Alarm\n You can check your current trip by the floating button on the bottom right</string>
    <string name="alight_message">Prepare to alight</string>
    <string name="select_start_bus_stop">Select Starting Bus Stop</string>
    <string name="select_alight_bus_stop">Select Alighting Bus Stop</string>
    <string name="deactivate_txt">DEACTIVATE</string>
</resources>
