<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_fare_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#374063"
    tools:context="com.klipspringercui.sgbusgo.FareCalculatorActivity"
    tools:showIn="@layout/activity_fare_calculator">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/calculator_icon" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#474F6E"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0"
                    android:src="@drawable/bus_small" />

                <Button
                    android:id="@+id/btnFCSelectBusService"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/itemBackGround"
                    android:elevation="0dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/bus_service_no"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#D8D8D8"
                    android:textSize="20dp" />


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/arrow_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#474F6E"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0"
                    android:src="@drawable/start_empty" />

                <Button
                    android:id="@+id/btnFCSelectStartingBusStop"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/itemBackGround"
                    android:fontFamily="sans-serif"
                    android:text="@string/start_bus_stop_txt"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#D8D8D8"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/arrow_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#474F6E"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0"
                    android:src="@drawable/end" />

                <Button
                    android:id="@+id/btnFCSelectAlightingBusStop"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@color/itemBackGround"
                    android:fontFamily="sans-serif"
                    android:text="@string/alight_bus_stop_txt"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#D8D8D8"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:src="@drawable/arrow_right" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_green"
            android:text="@string/btn_calculate_text"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#117382"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
